style: Fix button mis-alignment on LandingPage

--- a/src/Components/LandingPage/LandingPage.scss
+++ b/src/Components/LandingPage/LandingPage.scss
@@ -16,8 +16,9 @@
     }
   }
   .nav-bar {
-    align-self: center;
     display: flex;
+    align-self: center;
+    justify-content: center;
     .nav-link-home {
       @include button;
       text-transform: capitalize;
